[gd_scene load_steps=16 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://fonts/wellfleet_mono_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/wellfleet_mono_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://OptionButton.gd" type="Script" id=4]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.207843, 0.207843, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="GDScript" id=10]
script/source = "extends LineEdit

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	grab_focus()
	
func _on_Input_text_entered(new_text: String) -> void:
	clear()
"

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1009.0
margin_bottom = 585.0
custom_constants/separation = 15

[node name="GameRows" type="VBoxContainer" parent="Background/MarginContainer/Columns"]
margin_right = 200.0
margin_bottom = 570.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 15

[node name="InventoryLabel" type="PanelContainer" parent="Background/MarginContainer/Columns/GameRows"]
margin_right = 200.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="Background/MarginContainer/Columns/GameRows/InventoryLabel"]
margin_right = 200.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 2 )
text = "Placeholder"
align = 1

[node name="InventoryPanel" type="PanelContainer" parent="Background/MarginContainer/Columns/GameRows"]
margin_top = 46.0
margin_right = 200.0
margin_bottom = 520.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="DropDownMenu" type="PanelContainer" parent="Background/MarginContainer/Columns/GameRows"]
margin_top = 535.0
margin_right = 200.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 35 )
custom_styles/panel = SubResource( 3 )

[node name="OptionButton" type="OptionButton" parent="Background/MarginContainer/Columns/GameRows/DropDownMenu"]
margin_right = 200.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
align = 1
script = ExtResource( 4 )

[node name="InventoryRows" type="VBoxContainer" parent="Background/MarginContainer/Columns"]
margin_left = 215.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Columns/InventoryRows"]
margin_right = 779.0
margin_bottom = 520.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Columns/InventoryRows/GameInfo"]
margin_right = 779.0
margin_bottom = 520.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Columns/InventoryRows/GameInfo/Scroll"]
margin_right = 779.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Columns/InventoryRows"]
margin_top = 535.0
margin_right = 779.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 35 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Columns/InventoryRows/InputArea"]
margin_right = 779.0
margin_bottom = 35.0

[node name="Caret" type="Label" parent="Background/MarginContainer/Columns/InventoryRows/InputArea/HBoxContainer"]
margin_top = 2.0
margin_right = 28.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Columns/InventoryRows/InputArea/HBoxContainer"]
margin_left = 32.0
margin_right = 779.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 4 )
max_length = 48
script = SubResource( 10 )

[connection signal="text_entered" from="Background/MarginContainer/Columns/InventoryRows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Columns/InventoryRows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Columns/InventoryRows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
